--- a/maxima51.ru/index.html
+++ b/maxima51.ru/index.html
@@ -23,7 +23,7 @@
     <!-- menu -->
     <nav class="menu">
       <ul class="menu-list container">
-        <li class="menu-item" id="logo">
+        <li class="menu-item logo">
           <a class="menu-logo" href="http://maxima51.ru/" title="Миксима"><img src="assets/images/logo.png" alt="Логотип «Максима»"></a>
         </li>
         <li class="menu-item">
@@ -67,15 +67,15 @@
             <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
           </svg>
         </div>
-        <img class="ca-image" src="img/main.jpg">
+        <img class="ca-image" src="img/main.jpg" alt="Здание Делового Арктического центра">
       </a>
       <!-- lightbox image (hidden)-->
       <a href="#_" class="-lightbox" id="photo-office-building">
-        <img src="img/main.jpg">
+        <img src="img/main.jpg" alt="Здание Делового Арктического центра">
       </a>
       <!-- about office buildng -->
       <div class="ca-description">
-        <div class="ca-headline">Аренда офисов в Деловом «Арктическом Центре».</div>
+        <h1 class="ca-headline">Аренда офисов в Деловом «Арктическом Центре».</h1>
         <div class="ca-company">«Арктический центр» - бизнес-центр класса А+, расположенный в центре Мурманска.
 ( <a class="ca-adress" rel="nofollow" href="https://yandex.ru/maps/-/CBqEm4epPD">открыть карту</a> ). Площадь офисных помещений от 20 до 100 м2</div>
         <div class="ca-body">
@@ -151,11 +151,11 @@
                   <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
                 </svg>
               </div>
-              <img class="-image-small" src="img/office-5.jpg">
+              <img class="-image-small" src="img/office-5.jpg" alt="Офис в Деловом Арктическом Центре">
             </a>
             <!-- lightbox image (hidden)-->
             <a href="#_" class="-lightbox" id="photo-office-5">
-              <img src="img/office-5.jpg">
+              <img src="img/office-5.jpg" alt="Офис в Деловом Арктическом Центре">
             </a>
             <!-- office image -->
             <a class="cg-imagebox" href="#photo-office-hall">
@@ -164,11 +164,11 @@
                   <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
                 </svg>
               </div>
-              <img class="-image-small" src="img/office-hall.jpg">
+              <img class="-image-small" src="img/office-hall.jpg" alt="Офис в Деловом Арктическом Центре">
             </a>
             <!-- lightbox image (hidden)-->
             <a href="#_" class="-lightbox" id="photo-office-hall">
-              <img src="img/office-hall.jpg">
+              <img src="img/office-hall.jpg" alt="Офис в Деловом Арктическом Центре">
             </a>
             <!-- office image -->
             <a class="cg-imagebox" href="#photo-office-1">
@@ -177,11 +177,11 @@
                   <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
                 </svg>
               </div>
-              <img class="-image-medium" src="img/office-1.jpg">
+              <img class="-image-medium" src="img/office-1.jpg" alt="Офис в Деловом Арктическом Центре">
             </a>
             <!-- lightbox image (hidden)-->
             <a href="#_" class="-lightbox" id="photo-office-1">
-              <img src="img/office-1.jpg">
+              <img src="img/office-1.jpg" alt="Офис в Деловом Арктическом Центре">
             </a>
         </div>
         <div class="cg-imagelist-column">
@@ -192,11 +192,11 @@
                 <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
               </svg>
             </div>
-            <img class="-image-medium" src="img/office-2.jpg">
+            <img class="-image-medium" src="img/office-2.jpg" alt="Офис в Деловом Арктическом Центре">
           </a>
           <!-- lightbox image (hidden)-->
           <a href="#_" class="-lightbox" id="photo-office-2">
-            <img src="img/office-2.jpg">
+            <img src="img/office-2.jpg" alt="Офис в Деловом Арктическом Центре">
           </a>
           <!-- office image -->
           <a class="cg-imagebox" href="#photo-office-3">
@@ -205,11 +205,11 @@
                 <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
               </svg>
             </div>
-            <img class="-image-small" src="img/office-3.jpg">
+            <img class="-image-small" src="img/office-3.jpg" alt="Офис в Деловом Арктическом Центре">
           </a>
           <!-- lightbox image (hidden)-->
           <a href="#_" class="-lightbox" id="photo-office-3">
-            <img src="img/office-3.jpg">
+            <img src="img/office-3.jpg" alt="Офис в Деловом Арктическом Центре">
           </a>
           <!-- office image -->
           <a class="cg-imagebox" href="#photo-office-4">
@@ -218,11 +218,11 @@
                 <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
               </svg>
             </div>
-            <img class="-image-small" src="img/office-4.jpg">
+            <img class="-image-small" src="img/office-4.jpg" alt="Офис в Деловом Арктическом Центре">
           </a>
           <!-- lightbox image (hidden)-->
           <a href="#_" class="-lightbox" id="photo-office-4">
-            <img src="img/office-4.jpg">
+            <img src="img/office-4.jpg" alt="Офис в Деловом Арктическом Центре">
           </a>
         </div>  
       </div>
@@ -230,7 +230,7 @@
     <!-- our offers -->
     <section id="content-offer">
       <div class="co-description">
-        <div class="co-headline">Предлагаем аренду по адекватной цене!</div>
+        <h2 class="co-headline">Предлагаем аренду по адекватной цене!</h2>
         <div class="co-value">
           <span class="-big-text">800 </span><span class="price-text">&#8381;/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на ул. Буркова</span>
@@ -259,11 +259,11 @@
                 <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
               </svg>
             </div>
-            <img src="img/plan-1.jpg">
+            <img src="img/plan-1.jpg" alt="План этажа Делового Арктического Центра">
           </a>
           <!-- lightbox image (hidden)-->
           <a href="#_" class="-lightbox" id="scheme-floor-4">
-            <img src="img/plan-1.jpg">
+            <img src="img/plan-1.jpg" alt="План этажа Делового Арктического Центра">
           </a>
           <div class="co-caption">Этаж 4</div>
           <div class="co-title">
@@ -300,11 +300,11 @@
                 <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
               </svg>
             </div>
-            <img src="img/plan-2.jpg">
+            <img src="img/plan-2.jpg" alt="План этажа Делового Арктического Центра">
           </a>
           <!-- lightbox image (hidden)-->
           <a href="#_" class="-lightbox" id="scheme-floor-8">
-            <img src="img/plan-2.jpg">
+            <img src="img/plan-2.jpg" alt="План этажа Делового Арктического Центра">
           </a>
           <div class="co-caption">Этаж 8</div>
           <div class="co-title">
@@ -357,11 +357,11 @@
                 <path fill="currentColor" d="M319.8 204v8c0 6.6-5.4 12-12 12h-84v84c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-84h-84c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h84v-84c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12zm188.5 293L497 508.3c-4.7 4.7-12.3 4.7-17 0l-129-129c-2.3-2.3-3.5-5.3-3.5-8.5v-8.5C310.6 395.7 261.7 416 208 416 93.8 416 1.5 324.9 0 210.7-1.5 93.7 93.7-1.5 210.7 0 324.9 1.5 416 93.8 416 208c0 53.7-20.3 102.6-53.7 139.5h8.5c3.2 0 6.2 1.3 8.5 3.5l129 129c4.7 4.7 4.7 12.3 0 17zM384 208c0-97.3-78.7-176-176-176S32 110.7 32 208s78.7 176 176 176 176-78.7 176-176z" class=""></path>
               </svg>
             </div>
-            <img src="img/plan-3.jpg">
+            <img src="img/plan-3.jpg" alt="План этажа Делового Арктического Центра">
           </a>
           <!-- lightbox image (hidden)-->
           <a href="#_" class="-lightbox" id="scheme-floor-9">
-            <img src="img/plan-3.jpg">
+            <img src="img/plan-3.jpg" alt="План этажа Делового Арктического Центра">
           </a>
           <div class="co-caption">Этаж 9</div>
           <div class="co-title">
@@ -394,7 +394,7 @@
     </section>
     <!-- our contacts -->
     <section id="content-contacts">
-      <div class="cc-header">Индивидуальное предложение по заявке на электронную почту:</div>
+      <h3 class="cc-header">Индивидуальное предложение по заявке на электронную почту:</h3>
       <div class="cc-phone">+7(911) 345-66-00</div>
       <div class="cc-mail"><strong>arenda@maxima51.ru</strong></div>
     </section>
@@ -404,7 +404,7 @@
     <!-- menu -->
     <nav class="menu">
       <ul class="menu-list container">
-        <li class="menu-item" id="logo">
+        <li class="menu-item logo">
           <a class="menu-logo" href="http://maxima51.ru/" title="Миксима"><img src="assets/images/logo.png" alt="Логотип «Максима»"></a>
         </li>
         <li class="menu-item">
