--- a/maxima51.ru/index.html
+++ b/maxima51.ru/index.html
@@ -87,7 +87,7 @@
             <div class="-small-text">( <a class="ca-adress" rel="nofollow" href="https://yandex.ru/maps/-/CBqEm4epPD">карта</a> )</div>
           </div>
           <div class="ca-numbers-column">
-            <div class="-big-text">900 &#8381;/м2</div>
+            <div class="-big-text">900 руб/м2</div>
             <div class="-small-text">средняя цена аренды</div>
           </div>
           <div class="ca-numbers-column">
@@ -232,15 +232,15 @@
       <div class="co-description">
         <h2 class="co-headline">Предлагаем аренду по адекватной цене!</h2>
         <div class="co-value">
-          <span class="-big-text">800 </span><span class="price-text">&#8381;/м<sup>2</sup></span>
+          <span class="-big-text">800 </span><span class="price-text">руб/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на ул. Буркова</span>
         </div>
         <div class="co-value">
-          <span class="-big-text">900 </span><span class="price-text">&#8381;/м<sup>2</sup></span>
+          <span class="-big-text">900 </span><span class="price-text">руб/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на город</span>
         </div>
         <div class="co-value">
-          <span class="-big-text">1.000 </span><span class="price-text">&#8381;/м<sup>2</sup></span>
+          <span class="-big-text">1.000 </span><span class="price-text">руб/м<sup>2</sup></span>
           <span class="-small-text">Офисы - эркеры</span>
         </div>
         <div class="co-hot"><span>Каждой компании</span>, при<br><span>личном знакомстве</span>,<br>мы <span>готовы сделать</span><br><span>предожение.</span>
@@ -272,7 +272,7 @@
           <table class="co-table">
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
-              <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
+              <th><span class="-table-cell-caption">Стоимость </span>(руб/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>400</td>
@@ -313,7 +313,7 @@
           <table class="co-table">
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
-              <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
+              <th><span class="-table-cell-caption">Стоимость </span>(руб/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>800</td>
@@ -370,7 +370,7 @@
           <table class="co-table">
             <tr>
               <th><span class="-table-cell-caption">Номер </span>(№)</th>
-              <th><span class="-table-cell-caption">Стоимость </span>(&#8381;/м<sup>2</sup>)</th>
+              <th><span class="-table-cell-caption">Стоимость </span>(руб/м<sup>2</sup>)</th>
             </tr>
             <tr>
               <td>909/910</td>
