--- a/maxima51.ru/index.html
+++ b/maxima51.ru/index.html
@@ -232,15 +232,15 @@
       <div class="co-description">
         <h2 class="co-headline">Предлагаем аренду по адекватной цене!</h2>
         <div class="co-value">
-          <span class="-big-text">800 </span><span class="price-text">руб/м<sup>2</sup></span>
+          <span class="price-num">800</span> <span class="price-text">руб/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на ул. Буркова</span>
         </div>
         <div class="co-value">
-          <span class="-big-text">900 </span><span class="price-text">руб/м<sup>2</sup></span>
+          <span class="price-num">900</span> <span class="price-text">руб/м<sup>2</sup></span>
           <span class="-small-text">Офисы с видом на город</span>
         </div>
         <div class="co-value">
-          <span class="-big-text">1.000 </span><span class="price-text">руб/м<sup>2</sup></span>
+          <span class="price-num">1.000</span> <span class="price-text">руб/м<sup>2</sup></span>
           <span class="-small-text">Офисы - эркеры</span>
         </div>
         <div class="co-hot"><span>Каждой компании</span>, при<br><span>личном знакомстве</span>,<br>мы <span>готовы сделать</span><br><span>предожение.</span>
