--- a/454244.ru/index.html
+++ b/454244.ru/index.html
@@ -39,19 +39,19 @@
       <div id="services">
         <ul id="l-carousel">
           <li class="service-card">
-            <figure><img src="/assets/01.jpg" alt="Бурение скважины"><figcaption>Бурение скважин</figcaption></figure>
+            <figure><img src="assets/01.jpg" alt="Бурение скважины"><figcaption>Бурение скважин</figcaption></figure>
             <a href="/water.html"></a>
           </li>
           <li class="service-card">
-            <figure><img src="/assets/02.jpg" alt="Бурение скважины"><figcaption>Бурение под сваи</figcaption></figure>
+            <figure><img src="assets/02.jpg" alt="Бурение скважины"><figcaption>Бурение под сваи</figcaption></figure>
             <a href="/drill_pile.html"></a>
           </li>
           <li class="service-card">
-            <figure><img src="/assets/03.jpg" alt="Бурение скважины"><figcaption>Бурение под ограждения</figcaption></figure>
+            <figure><img src="assets/03.jpg" alt="Бурение скважины"><figcaption>Бурение под ограждения</figcaption></figure>
             <a href="/drill_fence.html"></a>
           </li>
           <li class="service-card">
-            <figure><img src="/assets/04.jpg" alt="Бурение скважины"><figcaption>Бурение анкеров</figcaption></figure>
+            <figure><img src="assets/04.jpg" alt="Бурение скважины"><figcaption>Бурение анкеров</figcaption></figure>
             <a href="/drill_fence.html"></a>
           </li>
         </ul>
@@ -121,7 +121,7 @@
           <i class="check"></i>
         </div>
         <div class="text">
-          <span>Мы готовы проконсультировать и даже приехать к Вам на объект - совершенно <strong>бесплатно!</strong></span>
+          <span>Мы готовы проконсультировать и даже приехать к Вам на объект - совершенно бесплатно!</span>
         </div>
       </div>
       <div id="events" class="container">
@@ -141,11 +141,11 @@
           <p>Новые фотографии с мест проведения буровых работ.</p>
         </div>
         <ul class="l-carousel">
-          <li class="gallery-card"><figure><img class="photo" src="/img/01.jpg" alt="/"></figure></li>
-          <li class="gallery-card"><figure><img class="photo" src="/img/02.jpg" alt="/"></figure></li>
-          <li class="gallery-card"><figure><img class="photo" src="/img/03.jpg" alt="/"></figure></li>
-          <li class="gallery-card"><figure><img class="photo" src="/img/04.jpg" alt="/"></figure></li>
-          <li class="gallery-card"><figure><img class="photo" src="/img/05.jpg" alt="/"></figure></li>
+          <li class="gallery-card"><figure><img class="photo" src="img/01.jpg" alt="/"></figure></li>
+          <li class="gallery-card"><figure><img class="photo" src="img/02.jpg" alt="/"></figure></li>
+          <li class="gallery-card"><figure><img class="photo" src="img/03.jpg" alt="/"></figure></li>
+          <li class="gallery-card"><figure><img class="photo" src="img/04.jpg" alt="/"></figure></li>
+          <li class="gallery-card"><figure><img class="photo" src="img/05.jpg" alt="/"></figure></li>
         </ul>
         <div class="container">
           <a href="">Открыть альбом</a>
@@ -162,7 +162,7 @@
       <address class="container">
         Телефон: (8152) 45-42-44<br>
         Почта: geo@454244.ru<br>
-        Адрес: 183039, г.Мурманск,<br> Рогозерская ул., д. 12<br>
+        Адрес: 183039, г. Мурманск,<br> Рогозерская ул., д. 12<br>
         Время работы: <br>ПН-ПТ 09:00 - 18:00
       </address>
       <div id="copyright">
