--- a/454244.ru/index.html
+++ b/454244.ru/index.html
@@ -99,9 +99,9 @@
           <a href="/">Каталог оборудования</a>
         </div>
         <div class="brands">
-          <img src="/assets/atlascopco.png" alt="Atlas Copco">
-          <img src="/assets/unipump.png" alt="Unipump">
-          <img src="/assets/grundfos.png" alt="Grundfos">
+          <img src="assets/atlascopco.png" alt="Atlas Copco">
+          <img src="assets/unipump.png" alt="Unipump">
+          <img src="assets/grundfos.png" alt="Grundfos">
         </div>
       </div>
       <div id="community" class="container">
