--- a/454244.ru/index.html
+++ b/454244.ru/index.html
@@ -168,7 +168,7 @@
       <div id="copyright">
         <span>Геотехцентр @ 2006 - 2018</span>
       </div>
-      <script src="/js/main.js" defer></script>
+      <script src="js/main.js" defer></script>
     </footer>
   </body>
 </html>
