--- a/454244.ru/geofis.html
+++ b/454244.ru/geofis.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Бурение скважин | Цена, Мурманск, область</title>
-  <meta name="description" content="Бурение скважин на воду, под сваи, поиск воды, геофизические исследования Обустройство скважин в Мурманске и области по приемлемой цене.">
+  <title>Поиск воды | Цена, Мурманск, область</title>
+  <meta name="description" content="Поиск воды, геофизические исследования, бурение скважин на воду, под сваи, Обустройство скважин  в Мурманске и области по приемлемой цене.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <style>
     @font-face {
@@ -146,19 +146,15 @@
       <div class="contactbar__item"><a href="tel:8152454244" class="contactbar__link">8152 45-42-44</a></div>
     </div>
     <figure class="hero" itemscope itemtype="http://schema.org/ImageObject">
-      <img class="image" src="/assets/hero.jpg" alt="Своя вода для своей семьи" itemprop="contentUrl" />
-      <figcaption class="caption">
-        <span class="slogan">Если буриться, то только с лидером!</span>
-        <cite>— Геотехцентр</cite>
-      </figcaption>
+      <img class="image" src="/assets/geofis.jpg" alt="Геофизические исследования (Поиск Воды)" itemprop="contentUrl" />
     </figure>
     <nav class="services" itemscope="itemscope" itemtype="http://www.schema.org/SiteNavigationElement" role="navigation">
       <ul class="tabrow">
-          <li id="tab-1" class="tab selected"><a class="link" href="#">Буровые <br>работы</a></li>
-          <li id="tab-2" class="tab"><a class="link" href="#">Инженерные <br>изыскания</a></li>
+          <li id="tab-1" class="tab"><a class="link" href="#">Буровые <br>работы</a></li>
+          <li id="tab-2" class="tab selected"><a class="link" href="#">Инженерные <br>изыскания</a></li>
       </ul>
       <ul class="carousel">
-        <li class="service-card tab-1">
+        <li class="service-card tab-1" style="display: none;">
           <a class="link" itemprop="url" href="/drill_water.html" title="Бурение скважин на воду">
             <figure class="imagebox">
               <img class="image" src="assets/drill_water.jpg" alt="Бурение скважин на воду" />
@@ -167,7 +163,7 @@
             <div class="button">Подробнее</div>
           </a>
         </li>
-        <li class="service-card tab-1">
+        <li class="service-card tab-1" style="display: none;">
           <a class="link" itemprop="url" href="/drill_pile.html" title="Бурение сваи под фундамент">
             <figure class="imagebox">
               <img class="image" src="assets/drill_pile.jpg" alt="Бурение сваи под фундамент" />
@@ -176,7 +172,7 @@
             <div class="button">Подробнее</div>
           </a>
         </li>
-        <li class="service-card tab-1">
+        <li class="service-card tab-1" style="display: none;">
           <a class="link" itemprop="url" href="/drill_termo.html" title="Бурение скважин для тепловых насосов">
             <figure class="imagebox">
               <img class="image" src="assets/drill_termo.jpg" alt="Бурение скважин для тепловых насосов" />
@@ -185,7 +181,7 @@
             <div class="button">Подробнее</div>
           </a>
         </li>
-        <li class="service-card tab-1">
+        <li class="service-card tab-1" style="display: none;">
           <a class="link" itemprop="url" href="/drill_fence.html" title="Бурение под ограждения, анкера, заземления">
             <figure class="imagebox">
               <img class="image" src="assets/drill_fence.jpg" alt="Бурение под ограждения, анкера, заземления" />
@@ -194,7 +190,7 @@
             <div class="button">Подробнее</div>
           </a>
         </li>
-        <li class="service-card tab-1">
+        <li class="service-card tab-1" style="display: none;">
           <a class="link" itemprop="url" href="/drill_serv.html" title="Обустройство скважин на воду">
             <figure class="imagebox">
               <img class="image" src="assets/drill_serv.jpg" alt="Обустройство скважин на воду" />
@@ -203,7 +199,7 @@
             <div class="button">Подробнее</div>
           </a>
         </li>
-        <li class="service-card tab-2" style="display: none;">
+        <li class="service-card tab-2 is-active">
           <a class="link" itemprop="url" href="/geofis.html" title="Геофизические исследования (Поиск Воды)">
             <figure class="imagebox">
               <img class="image" src="assets/geofis.jpg" alt="Геофизические исследования (Поиск Воды)" />
@@ -212,7 +208,7 @@
             <div class="button">Подробнее</div>
           </a>
         </li>
-        <li class="service-card tab-2" style="display: none;">
+        <li class="service-card tab-2">
           <a class="link" itemprop="url" href="/drill_geoing.html" title="Инженерно - геологические изыскания">
             <figure class="imagebox">
               <img class="image" src="assets/drill_geoing.jpg" alt="Инженерно - геологические изыскания" />
@@ -221,7 +217,7 @@
             <div class="button">Подробнее</div>
           </a>
         </li>
-        <li class="service-card tab-2" style="display: none;">
+        <li class="service-card tab-2">
           <a class="link" itemprop="url" href="/water_test.html" title="Химический анализ воды">
             <figure class="imagebox">
               <img class="image" src="assets/water_test.jpg" alt="Химический анализ воды" />
@@ -235,10 +231,8 @@
   </header>
   <main class="content">
     <div class="section ">
-      <p>Бурение - достаточно сложный процесс. В нашем лице Вы найдете профессионального подрядчика высокой квалификации, способного
-        на высоком уровне выполнить необходимые работы.</p>
-      <p>ООО «Геотехцентр» осуществляет свою деятельность в Мурманской области с 2006 года. Буровые услуги, бурение водяных
-        скважин в частности - это наш основной, профильный вид деятельности.</p>
+      <p>Наша компания готова предложить Вам провести геофизическое исследование на предмет определения оптимального места для бурения скважины.</p>
+      <p>В ряде случаев без данной услуги просто не обойтись, а иногда в ней нет острой необходимости. Все зависит от конкретного участка и рельефа местности.</p>
     </div>
     <div class="box box-info">
       <div class="message">
