--- a/office-fish-port/index.html
+++ b/office-fish-port/index.html
@@ -108,7 +108,7 @@
       <div class="intro__carousel">
         <div class="owl-carousel">
           <div>
-            <img src="/main.JPG"
+            <img src="./img/main.JPG"
                  alt="">
           </div>
           <div>
@@ -149,7 +149,7 @@
     </section>
     <section class="cab-card mt-5">
       <div class="cab-card__left">
-        <img src="/img/cab.JPG"
+        <img src="./img/cab.JPG"
              alt=""
              width="100%">
         <div class="cab-card__annotation">
@@ -186,7 +186,7 @@
           <div class="cab-card__half">
             <hr class="cab-card__seporator">
             <h2>Планировка</h2>
-            <img src="/levoe-krilo-1.jpg"
+            <img src="./img/levoe-krilo-1.jpg"
                  width="100%"
                  alt="">
           </div>
@@ -201,19 +201,19 @@
             <hr class="cab-card__seporator">
             <h2>Фотографии</h2>
             <div class="owl-carousel-2">
-              <img src="img/DSCF6934.JPG"
+              <img src="./img/DSCF6934.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6935.JPG"
+              <img src="./img/DSCF6935.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6936.JPG"
+              <img src="./img/DSCF6936.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6937.JPG"
+              <img src="./img/DSCF6937.JPG"
                    alt=""
                    height="120px"
                    width="120px">
@@ -242,7 +242,7 @@
                     class=""></path>
             </svg>
             PDF</a>
-          <img src="office-scheme.jpg"
+          <img src="./img/office-scheme.jpg"
                width="100%"
                alt="">
         </div>
@@ -274,7 +274,7 @@
     </section>
     <section class="cab-card mt-5">
       <div class="cab-card__left">
-        <img src="/img/DSCF6985.JPG"
+        <img src="./img/DSCF6985.JPG"
              alt=""
              width="100%">
         <div class="cab-card__annotation">
@@ -293,7 +293,7 @@
           <div class="cab-card__half">
             <hr class="cab-card__seporator">
             <h2>Планировка</h2>
-            <img src="/levoe-krilo-3.jpg"
+            <img src="./img/levoe-krilo-3.jpg"
                  width="100%"
                  alt="">
           </div>
@@ -308,19 +308,19 @@
             <hr class="cab-card__seporator">
             <h2>Фотографии</h2>
             <div class="owl-carousel-2">
-              <img src="img/DSCF6979.JPG"
+              <img src="./img/DSCF6979.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6980.JPG"
+              <img src="./img/DSCF6980.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6981.JPG"
+              <img src="./img/DSCF6981.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6982.JPG"
+              <img src="./img/DSCF6982.JPG"
                    alt=""
                    height="120px"
                    width="120px">
@@ -354,7 +354,7 @@
             <p>Кухня с обеденной зоной, площадь 18 м2, в которой имеются плита, вытяжка, водонагреватель, современный новый
               кухонный гарнитур</p>
           </div>
-          <img src="img/cab.JPG"
+          <img src="./img/cab.JPG"
                width="100%"
                height="550px"
                alt="">
@@ -365,7 +365,7 @@
             <p>Кухня с обеденной зоной, площадь 18 м2, в которой имеются плита, вытяжка, водонагреватель, современный новый
               кухонный гарнитур</p>
           </div>
-          <img src="img/cab.JPG"
+          <img src="./img/cab.JPG"
                width="100%"
                height="550px"
                alt="">
@@ -376,7 +376,7 @@
             <p>Кухня с обеденной зоной, площадь 18 м2, в которой имеются плита, вытяжка, водонагреватель, современный новый
               кухонный гарнитур</p>
           </div>
-          <img src="img/cab.JPG"
+          <img src="./img/cab.JPG"
                width="100%"
                height="550px"
                alt="">
@@ -385,7 +385,7 @@
     </section>
     <section class="cab-card mt-5">
       <div class="cab-card__left">
-        <img src="/img/DSCF7014.JPG"
+        <img src="./img/DSCF7014.JPG"
              alt=""
              width="100%">
         <div class="cab-card__annotation">
@@ -404,7 +404,7 @@
           <div class="cab-card__half">
             <hr class="cab-card__seporator">
             <h2>Планировка</h2>
-            <img src="/levoe-krilo-3.jpg"
+            <img src="./img/levoe-krilo-3.jpg"
                  width="100%"
                  alt="">
           </div>
@@ -419,19 +419,19 @@
             <hr class="cab-card__seporator">
             <h2>Фотографии</h2>
             <div class="owl-carousel-2">
-              <img src="img/DSCF6979.JPG"
+              <img src="./img/DSCF6979.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6980.JPG"
+              <img src="./img/DSCF6980.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6981.JPG"
+              <img src="./img/DSCF6981.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6982.JPG"
+              <img src="./img/DSCF6982.JPG"
                    alt=""
                    height="120px"
                    width="120px">
@@ -466,7 +466,7 @@
             <p>Кухня с обеденной зоной, площадь 18 м2, в которой имеются плита, вытяжка, водонагреватель, современный новый
               кухонный гарнитур</p>
           </div>
-          <img src="img/cab.JPG"
+          <img src="./img/cab.JPG"
                width="100%"
                height="550px"
                alt="">
@@ -477,7 +477,7 @@
             <p>Кухня с обеденной зоной, площадь 18 м2, в которой имеются плита, вытяжка, водонагреватель, современный новый
               кухонный гарнитур</p>
           </div>
-          <img src="img/cab.JPG"
+          <img src="./img/cab.JPG"
                width="100%"
                height="550px"
                alt="">
@@ -488,7 +488,7 @@
             <p>Кухня с обеденной зоной, площадь 18 м2, в которой имеются плита, вытяжка, водонагреватель, современный новый
               кухонный гарнитур</p>
           </div>
-          <img src="img/cab.JPG"
+          <img src="./img/cab.JPG"
                width="100%"
                height="550px"
                alt="">
@@ -497,7 +497,7 @@
     </section>
     <section class="cab-card mt-5">
       <div class="cab-card__left">
-        <img src="/img/DSCF7014.JPG"
+        <img src="./img/DSCF7014.JPG"
              alt=""
              width="100%">
         <div class="cab-card__annotation">
@@ -516,7 +516,7 @@
           <div class="cab-card__half">
             <hr class="cab-card__seporator">
             <h2>Планировка</h2>
-            <img src="/levoe-krilo-3.jpg"
+            <img src="./img/levoe-krilo-3.jpg"
                  width="100%"
                  alt="">
           </div>
@@ -531,19 +531,19 @@
             <hr class="cab-card__seporator">
             <h2>Фотографии</h2>
             <div class="owl-carousel-2">
-              <img src="img/DSCF6979.JPG"
+              <img src="./img/DSCF6979.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6980.JPG"
+              <img src="./img/DSCF6980.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6981.JPG"
+              <img src="./img/DSCF6981.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6982.JPG"
+              <img src="./img/DSCF6982.JPG"
                    alt=""
                    height="120px"
                    width="120px">
@@ -564,7 +564,7 @@
           <div class="cab-card__half">
             <hr class="cab-card__seporator">
             <h2>Планировка</h2>
-            <img src="/levoe-krilo-3.jpg"
+            <img src="./img/levoe-krilo-3.jpg"
                  width="100%"
                  alt="">
           </div>
@@ -579,19 +579,19 @@
             <hr class="cab-card__seporator">
             <h2>Фотографии</h2>
             <div class="owl-carousel-2">
-              <img src="img/DSCF6979.JPG"
+              <img src="./img/DSCF6979.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6980.JPG"
+              <img src="./img/DSCF6980.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6981.JPG"
+              <img src="./img/DSCF6981.JPG"
                    alt=""
                    height="120px"
                    width="120px">
-              <img src="img/DSCF6982.JPG"
+              <img src="./img/DSCF6982.JPG"
                    alt=""
                    height="120px"
                    width="120px">
@@ -600,7 +600,7 @@
         </div>
       </div>
       <div class="cab-card__left">
-        <img src="/img/DSCF7037.JPG"
+        <img src="./img/DSCF7037.JPG"
              alt=""
              width="100%">
         <div class="cab-card__annotation">
@@ -619,7 +619,7 @@
           <a class="menu-logo"
              href="http://maxima51.ru/"
              title="Миксима">
-            <img src="assets/images/logo.png"
+            <img src="./img/logo.png"
                  alt="Логотип «Максима»">
           </a>
         </li>
