meta yandex metrika

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Частный вебмастер в Мурманске. Занимаюсь разработкой и обслуживанием сайтов, поисковой оптимизацией и интернет-маркетингом">
-    <title>Частный вебмастер Тигарев Евгений</title>
-  </head>
-  <body>
-    <h1>Технические работы на сайте</h1>
-    <p>Связаться со мной можно по номеру <a href="tel:+79211692439">+79211692439</a> или вконтакте <a href="https://vk.com/tigareves" target="_blank">vk.com/tigareves</a></p>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Частный вебмастер в Мурманске. Занимаюсь разработкой и обслуживанием сайтов, поисковой оптимизацией и интернет-маркетингом">
+  <title>Частный вебмастер Тигарев Евгений</title>
+  <meta name="yandex-verification" content="ed00eaf47947f997" />
+</head>
+
+<body>
+  <h1>Технические работы на сайте</h1>
+  <p>Связаться со мной можно по номеру
+    <a href="tel:+79211692439">+79211692439</a> или вконтакте
+    <a href="https://vk.com/tigareves" target="_blank">vk.com/tigareves</a>
+  </p>
+</body>
+
 </html>
