google webmaster meta

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Частный вебмастер в Мурманске. Занимаюсь разработкой и обслуживанием сайтов, поисковой оптимизацией и интернет-маркетингом">
   <title>Частный вебмастер Тигарев Евгений</title>
   <meta name="yandex-verification" content="ed00eaf47947f997" />
+  <meta name="google-site-verification" content="mTnE9zQ0-psxrqbpcDGqRllIv5ZV8I3cvDAIxI8Q1QA" />
 </head>
 
 <body>
