--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
     <a href="tel:+79211692439">+79211692439</a> или вконтакте
     <a href="https://vk.com/tigareves" target="_blank">vk.com/tigareves</a>
   </p>
+  <script type="text/javascript">
+    (function (d, w, c) {
+      (w[c] = w[c] || []).push(function () {
+        try {
+          w.yaCounter49394500 = new Ya.Metrika2({
+            id: 49394500,
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
+          });
+        } catch (e) { }
+      });
+
+      var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"),
+        f = function () { n.parentNode.insertBefore(s, n); };
+      s.type = "text/javascript";
+      s.async = true;
+      s.src = "https://mc.yandex.ru/metrika/tag.js";
+
+      if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+      } else { f(); }
+    })(document, window, "yandex_metrika_callbacks2");
+  </script>
+  <noscript>
+    <div>
+      <img src="https://mc.yandex.ru/watch/49394500" style="position:absolute; left:-9999px;" alt="" />
+    </div>
+  </noscript>
 </body>
 
 </html>
