--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>Технические работы на сайте</h1>
   <p>Связаться со мной можно по номеру
     <a href="tel:+79211692439">+79211692439</a> или вконтакте
-    <a href="https://vk.com/tigareves" target="_blank" rel="nofollow">vk.com/tigareves</a>
+    <a href="https://vk.com/tigareves" target="_blank" rel="noopener">vk.com/tigareves</a>
   </p>
   <script type="text/javascript">
     (function (d, w, c) {
