--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1>Технические работы на сайте</h1>
   <p>Связаться со мной можно по номеру
-    <a href="tel:+79211692439">+79211692439</a>
+    <a href="tel:+79211692439">+79211692439</a> или
   </p>
 </body>
 
