--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Частный вебмастер в Мурманске. Занимаюсь разработкой и обслуживанием сайтов, поисковой оптимизацией и интернет-маркетингом">
-  <title>Частный вебмастер Тигарев Евгений</title>
+  <title>Частный вебмастер Евгений Тигарев | Персональный сайт</title>
   <meta name="yandex-verification" content="ed00eaf47947f997" />
   <meta name="google-site-verification" content="mTnE9zQ0-psxrqbpcDGqRllIv5ZV8I3cvDAIxI8Q1QA" />
 </head>
@@ -13,7 +13,7 @@
 <body>
   <h1>Технические работы на сайте</h1>
   <p>Связаться со мной можно по номеру
-    <a href="tel:+79211692439">+79211692439</a> или
+    <a href="tel:+79211692439">+79211692439</a>
   </p>
 </body>
 
